logs/Slang/generated/hdlconv/hdlconvertor_p342.sv.log
name: hdlconvertor_p342
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv:3:1: error: unknown module 'bus_A'
bus_A a (phi1);
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv:4:1: error: unknown module 'bus_B'
bus_B b (phi2);
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv:5:1: error: unknown module 'test'
test main (a, b);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv:6:1: error: unknown module 'cpu'
cpu cpu1 (a);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p342.sv:7:1: error: unknown module 'mem'
mem mem1 (b);
^~~
